--- a/go/controller/config/samples/service_deployment.yaml
+++ b/go/controller/config/samples/service_deployment.yaml
@@ -1,19 +1,3 @@
-apiVersion: deployments.plural.sh/v1alpha1
-kind: Cluster
-metadata:
-  name: mgmt
-  namespace: default
-spec:
-  handle: mgmt
----
-apiVersion: deployments.plural.sh/v1alpha1
-kind: GitRepository
-metadata:
-  name: test
-  namespace: default
-spec:
-  url: https://github.com/zreigz/tf-hello.git
----
 apiVersion: v1
 kind: Secret
 metadata:
@@ -33,15 +17,13 @@ spec:
   configuration:
     version: "sha-ae2663f-terraform-1.8.2"
     image: "ghcr.io/pluralsh/harness"
-  repositoryRef:
-    name: test
-    namespace: default
-  clusterRef:
-    name: mgmt
-    namespace: default
+  repositoryRef: {}
+  clusterRef: {}
+  cluster: mgmt
   git:
     ref: main
     folder: terraform
+    url: https://github.com/zreigz/tf-hello.git
 ---
 apiVersion: deployments.plural.sh/v1alpha1
 kind: ServiceDeployment
@@ -53,14 +35,9 @@ spec:
   git:
     folder: nginx
     ref: master
-  repositoryRef:
-    kind: GitRepository
-    name: test
-    namespace: default
-  clusterRef:
-    kind: Cluster
-    name: mgmt
-    namespace: default
+    url: https://github.com/zreigz/k8s-helm.git
+  clusterRef: {}
+  cluster: mgmt
   imports:
     - stackRef:
         kind: InfrastructureStack
