--- a/plural/helm/console/crds/deployments.plural.sh_previewenvironmenttemplates.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_previewenvironmenttemplates.yaml
@@ -335,6 +335,9 @@ spec:
                         description: Ref is the Git reference (branch, tag, or commit)
                           to use.
                         type: string
+                      url:
+                        description: URL of the Git repository.
+                        type: string
                     required:
                     - folder
                     - ref
@@ -365,6 +368,9 @@ spec:
                           ref:
                             description: Ref is the Git reference (branch, tag, or
                               commit) to use.
+                            type: string
+                          url:
+                            description: URL of the Git repository.
                             type: string
                         required:
                         - folder
@@ -658,6 +664,9 @@ spec:
                             ref:
                               description: Ref is the Git reference (branch, tag,
                                 or commit) to use.
+                              type: string
+                            url:
+                              description: URL of the Git repository.
                               type: string
                           required:
                           - folder
