--- a/plural/helm/console/crds/deployments.plural.sh_sentinels.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_sentinels.yaml
@@ -90,6 +90,9 @@ spec:
                                   description: Ref is the Git reference (branch, tag,
                                     or commit) to use.
                                   type: string
+                                url:
+                                  description: URL of the Git repository.
+                                  type: string
                               required:
                               - folder
                               - ref
@@ -9935,6 +9938,9 @@ spec:
                   ref:
                     description: Ref is the Git reference (branch, tag, or commit)
                       to use.
+                    type: string
+                  url:
+                    description: URL of the Git repository.
                     type: string
                 required:
                 - folder
