--- a/charts/console/templates/deployment.yaml
+++ b/charts/console/templates/deployment.yaml
@@ -83,6 +83,8 @@ spec:
           mountPath: /tmp
         - name: conf-dir
           mountPath: /shared
+        - name: home-cache-dir
+          mountPath: {{ .Values.homeDir }}/.cache
         {{ if .Values.cloud.pgRootCert }}
         - mountPath: /opt/app/certs
           name: pg-cert
@@ -133,6 +135,8 @@ spec:
       - name: temp-dir
         emptyDir: {}
       - name: conf-dir
+        emptyDir: {}
+      - name: home-cache-dir
         emptyDir: {}
       {{ if .Values.cloud.pgRootCert }}
       - name: pg-cert
