--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -2595,6 +2595,14 @@
   publisher: eks
 - name: aws-mountpoint-s3-csi-driver
   versions:
+  - version: v2.2.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.2.0-eksbuild.1
     compatibilities:
     - '1.34'
