--- a/charts/console/templates/ingress.yaml
+++ b/charts/console/templates/ingress.yaml
@@ -20,22 +20,20 @@ spec:
   - host: {{ .Values.ingress.console_dns | quote }}
     http:
       paths:
-      - path: /ext/kas
+      - path: {{ .Values.kas.agent.path }}
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}-kas-service
             port:
-              number: 8180
-      {{ if .Values.dashboard.enabled }}
-      - path: /api
+              number: {{ .Values.kas.service.agentProxyPort }}
+      - path: {{ .Values.kas.api.path }}
         pathType: Prefix
         backend:
           service:
-            name: {{ template "kubernetes-dashboard.fullname" .Subcharts.dashboard }}-{{ .Values.dashboard.api.role }}
+            name: {{ .Release.Name }}-kas-service
             port:
-              name: {{ .Values.dashboard.api.role }}
-      {{ end }}
+              number: {{ .Values.kas.api.port }}
       - path: /
         pathType: Prefix
         backend:
