--- a/charts/console/values.yaml
+++ b/charts/console/values.yaml
@@ -60,7 +60,7 @@ console:
     # serviceAccountDomain is used to configure the service account domain.
     serviceAccountDomain: ~
     # deployOperatorUrl is used to configure the default deploy-operator git repository url, uses https://github.com/pluralsh/deployment-operator.git if not set.
-    deployOperatorUrl: ~  
+    deployOperatorUrl: ~
     # artifactsUrl is used to configure the default artifacts url, uses https://github.com/pluralsh/scaffolds.git if not set.
     artifactsUrl: ~
 
@@ -351,60 +351,44 @@ kas:
     additionalVolumeMounts: ~
 
   image:
-    # repository to pull kas image from. See: https://github.com/pluralsh/kubernetes-agent/pkgs/container/kas.
-    repository: ghcr.io/pluralsh/kas
+    # See: https://github.com/pluralsh/kubernetes-agent/pkgs/container/kubernetes-agent.
+    repository: ghcr.io/pluralsh/kubernetes-agent
     pullPolicy: IfNotPresent
-    # tag overrides the image tag whose default is the chart appVersion.
+    # Overrides the image tag whose default is the chart appVersion.
     tag: ""
-    # pullSecrets to access registry in case it requires authentication. See https://www.devspace.sh/component-chart/docs/configuration/pull-secrets
     pullSecrets: []
 
-  # consoleUrl is used to set the plural console url which is accessed through the GQL endpoint
   consoleUrl: ""
 
-  # nameOverride is used to expand chart name if set (otherwise uses Chart.Name). Truncated after 63 characters and also any trailing - characters (hyphens) are removed
   nameOverride: ""
 
-  # fullnameOverride is used to expand chart fullname if set. Truncated after 63 characters and also any trailing - characters (hyphens) are removed
   fullnameOverride: ""
 
-  # podAnnotations is the set of pod annotations to apply to the kas deployment
   podAnnotations: {}
-  # podLabels is the set of pod labels to apply to the kas deployment
   podLabels: {}
 
-  # podSecurityContext is the set of pod security context to apply to the kas container as well as the nginx container
   podSecurityContext:
     runAsUser: 65532
 
-  # securityContext is used to set the security context for the kas deployment
   securityContext:
     runAsUser: 65532
     runAsGroup: 65532
     fsGroup: 65532
 
-  # priorityClassName is used to set the priority class for the kas deployment. See https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/
   priorityClassName: ""
 
-  # extraEnv is used to set any extra environment variables for the kas container
   extraEnv: []
 
-  # extraArgs is used to set any extra arguments for the kas container
   extraArgs: []
 
-  # nodeSelector for kas deployment. See https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
   nodeSelector: {}
 
-  # affinity for kas deployment. See https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
   affinity: {}
 
-  # tolerations for kas deployment. See https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
   tolerations: []
 
-  # a list of init containers to apply to the kas deployments pod template 
   initContainers: []
 
-  # resources is used to set the resource requests and limits for the kas container
   resources:
     limits:
       cpu: 500m
@@ -414,19 +398,12 @@ kas:
       memory: 128Mi
 
   service:
-    # externalPort is the port for the kas external API
-    externalPort: 8150
-    # internalPort is the targetPort for the kas external API
-    internalPort: 8150
-    # apiInternalPort is the port and targetPort for the kas internal API
+    agentPort: 8150
+    agentProxyPort: 8180
     apiInternalPort: 8153
-    # kubernetesApiPort is the port and targetPort for the kas kubernetes API
     kubernetesApiPort: 8154
-    # privateApiPort is used to set OWN_PRIVATE_API_URL for the kas container
     privateApiPort: 8155
-    # observabilityPort is the port and targetPort for the kas service's http metrics API
     observabilityPort: 8151
-    # type is used to set the service type for the kas service
     type: ClusterIP
 
   serviceAccount:
@@ -439,107 +416,66 @@ kas:
     name: ""
 
   metrics:
-    # enabled is the flag for if the metrics service should be enabled
     enabled: false
-    # path is the api path for the metrics service
     path: /metrics
     serviceMonitor:
-      # enabled is the flag for if the metrics service monitor should be enabled
       enabled: false
-      # additionalLablels is the set of any additional labels to apply to the metrics service monitor
       additionalLabels: {}
-      # endpointConfig is the set of any additional config to apply to the metrics service monitor endpoint
       endpointConfig: {}
 
   replicCount: 1
 
   autoscaling:
-    # enabled is the flag for if the autoscaler (HorizontalPodAutoscaler) should be enabled
     enabled: false
-    # minReplicas is the minimum number of replicas for the autoscaler config
     minReplicas: 2
-    # maxReplicas is the maximum number of replicas for the autoscaler config
     maxReplicas: 10
-    # targetCPUAverageValue is the target average CPU usage for the autoscaler config
     targetCPUAverageValue: 100m
     # targetCPUUtilizationPercentage: 75
     # targetMemoryUtilizationPercentage: 75
 
   secrets:
-    # create is the flag for if the secrets should be created
     create: true
-    # api is currently unused in the kas helm chart
     api: ""
-    # privateapi is currently unused in the kas helm chart
     privateapi: ""
-    # redis is currently unused in the kas helm chart
     redis: ""
 
   agent:
-    # path is one of the paths under the kas DNS, used for the agent
     path: /ext/kas
-    # backend is used to set the upstream websocket server and the server location proxy_pass
-    backend: localhost:8150
-    proxy:
-      image:
-        # repository to pull the nginx image from
-        repository: ghcr.io/pluralsh/registry/nginx
-        # tag for the nginx image
-        tag: stable-alpine3.20-slim
-        # pullPolicy for the nginx image
-        pullPolicy: IfNotPresent
-      # port for the agent path
-      port: 8180
 
-      # podSecurityContext is used to set security context for the nginx container
-      podSecurityContext:
-        runAsUser: 65532
+  api:
+    path: /api
+    port: 8000
 
   ingress:
-    # enabled flag is currently not used in the helm chart
-    enabled: true
-    # ingressClass is used to set ingressClassName for the kas ingress controller
+    #  enabled: true
     ingressClass: nginx
-    # kubernetesApiPath is used to set the API path for the kubernetes API
-    kubernetesApiPath: /k8s-proxy
-    # tlsSecretName is used to set the secret name for tls if tls.enabled is true
+    #  kubernetesApiPath: /k8s-proxy
     tlsSecretName: kas-tls
 
     tls:
-      # enabled flag is used to determine if tls should be enabled
       enabled: true
 
-    # annotations is used to set the kas ingress controller annotations
     annotations:
       kubernetes.io/tls-acme: "true"
       cert-manager.io/cluster-issuer: letsencrypt-prod
 
   redis:
-    # enabled flag is used to print out if redis should be enabled
     enabled: true
-    # architecture is not currently used in the kas helm chart
     architecture: standalone
-    # global is not currently used in the kas helm chart
     global:
       security:
         allowInsecureImages: true
-    # image is not currently used in the kas helm chart    
     image:
       registry: ghcr.io
       repository: pluralsh/registry/bitnami/redis
       tag: 7.4.2-debian-12-r5
-    # auth is not currently used in the kas helm chart
     auth:
       enabled: true
       sentinel: false
-    # sentinel is not currently used in the kas helm chart
     sentinel:
       enabled: false
-    # master is used to set the value of the redis server address
     master:
-      # count is not currently used in the kas helm chart
       count: 1
-    # commonConfiguration is not currently used in the kas helm chart
     commonConfiguration: |-
       # Enable AOF https://redis.io/topics/persistence#append-only-file
       appendonly yes
@@ -547,254 +483,6 @@ kas:
       save ""
       # Enable idle client connection timeout (5 minutes)
       timeout 300
-
-# dashboard is used to override some values in kubernetes dashboard default chart (packaged in charts/kubernetes-dashboard-*.tgz). See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml
-dashboard:
-  # enabled is used in Chart.yaml to determine if dashboard dependency should be installed
-  enabled: true
-  # cert-manager is used to override the default cert-manager configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L403
-  cert-manager:
-    enabled: false
-    installCrds: false
-  # metrics-server is used to override the default metrics-server configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L375
-  metrics-server:
-    enabled: false
-  # nginx is used to override the default nginx configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L409
-  nginx:
-    enabled: false
-  # app is used to override the default app configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L16
-  app:
-    mode: 'api'
-  # kong is used to override the default kong configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L383
-  kong:
-    enabled: false
-  # api is used to override the default api configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L186
-  api:
-    containers:
-      resources:
-        requests:
-          cpu: 250m
-          memory: 250Mi
-        limits:
-          cpu: 1
-          memory: 2Gi
-      args:
-        - --act-as-proxy
-        - --apiserver-host=https://$(KAS_HOST)/k8s-proxy
-        - --apiserver-skip-tls-verify
-        - --metrics-provider=none
-        - --cluster-context-enabled=true
-        - --token-exchange-endpoint=http://$(CONSOLE_HOST)/v1/dashboard/cluster
-        - --disable-csrf-protection
-      env:
-        - name: KAS_HOST
-          valueFrom:
-            secretKeyRef:
-              name: console-env
-              key: KAS_HOST
-        - name: CONSOLE_HOST
-          valueFrom:
-            secretKeyRef:
-              name: console-env
-              key: CONSOLE_HOST
-
-  # All items below are the default values in the dashboard chart (i.e. no override unless user changes the values). Potentially useful for documentation
-
-  # auth can be used to override the default auth configuration in the dashboard chart. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L144
-  auth:
-    role: auth
-    image:
-      repository: docker.io/kubernetesui/dashboard-auth
-    scaling:
-      replicas: 1
-      revisionHistoryLimit: 10
-    service:
-      type: ClusterIP
-      extraSpec: ~
-    containers:
-      ports:
-        - name: auth
-          containerPort: 8000
-          protocol: TCP
-      args: []
-      env: []
-      volumeMounts:
-        - mountPath: /tmp
-          name: tmp-volume
-      resources:
-        requests:
-          cpu: 100m
-          memory: 200Mi
-        limits:
-          cpu: 250m
-          memory: 400Mi
-    automountServiceAccountToken: true
-    volumes:
-      # Create on-disk volume to store exec logs (required)
-      - name: tmp-volume
-        emptyDir: {}
-    nodeSelector: {}
-    # Labels & annotations for Auth related resources
-    labels: {}
-    annotations: {}
-    serviceLabels: {}
-    serviceAnnotations: {}
-
-  # web is used to configure the web UI deployment configuration. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L246
-  web:
-    role: web
-    image:
-      repository: docker.io/kubernetesui/dashboard-web
-    scaling:
-      replicas: 1
-      revisionHistoryLimit: 10
-    service:
-      type: ClusterIP
-      extraSpec: ~
-    containers:
-      ports:
-        - name: web
-          containerPort: 8000
-          protocol: TCP
-      # Additional container arguments
-      # Full list of arguments: https://github.com/kubernetes/dashboard/blob/master/docs/common/arguments.md
-      # args:
-      # - --system-banner="Welcome to the Kubernetes Dashboard"
-      args: []
-      # Additional container environment variables
-      # env:
-      # - name: SOME_VAR
-      #   value: 'some value'
-      env: []
-      # Additional volume mounts
-      # - mountPath: /kubeconfig
-      #   name: dashboard-kubeconfig
-      #   readOnly: true
-      volumeMounts:
-        # Create volume mount to store logs (required)
-        - mountPath: /tmp
-          name: tmp-volume
-      resources:
-        requests:
-          cpu: 100m
-          memory: 200Mi
-        limits:
-          cpu: 250m
-          memory: 400Mi
-    automountServiceAccountToken: true
-    # Additional volumes
-    # - name: dashboard-kubeconfig
-    #   secret:
-    #     defaultMode: 420
-    #     secretName: dashboard-kubeconfig
-    volumes:
-      # Create on-disk volume to store exec logs (required)
-      - name: tmp-volume
-        emptyDir: {}
-    nodeSelector: {}
-    # Labels & annotations for WEB UI related resources
-    labels: {}
-    annotations: {}
-    serviceLabels: {}
-    serviceAnnotations: {}
-
-  # metricsScraper is used to configure the metrics scraper deployment configuration. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L308
-  # Container to scrape, store, and retrieve a window of time from the Metrics Server.
-  # refs: https://github.com/kubernetes/dashboard/tree/master/modules/metrics-scraper
-  metricsScraper:
-    enabled: true
-    role: metrics-scraper
-    image:
-      repository: docker.io/kubernetesui/dashboard-metrics-scraper
-    scaling:
-      replicas: 1
-      revisionHistoryLimit: 10
-    service:
-      type: ClusterIP
-      extraSpec: ~
-    containers:
-      ports:
-        - containerPort: 8000
-          protocol: TCP
-      args: []
-      # Additional container environment variables
-      # env:
-      # - name: SOME_VAR
-      #   value: 'some value'
-      env: []
-      # Additional volume mounts
-      # - mountPath: /kubeconfig
-      #   name: dashboard-kubeconfig
-      #   readOnly: true
-      volumeMounts:
-        # Create volume mount to store logs (required)
-        - mountPath: /tmp
-          name: tmp-volume
-      resources:
-        requests:
-          cpu: 100m
-          memory: 200Mi
-        limits:
-          cpu: 250m
-          memory: 400Mi
-      livenessProbe:
-        httpGet:
-          scheme: HTTP
-          path: /
-          port: 8000
-        initialDelaySeconds: 30
-        timeoutSeconds: 30
-    automountServiceAccountToken: true
-    # Additional volumes
-    # - name: dashboard-kubeconfig
-    #   secret:
-    #     defaultMode: 420
-    #     secretName: dashboard-kubeconfig
-    volumes:
-      - name: tmp-volume
-        emptyDir: {}
-    nodeSelector: {}
-    # Labels & annotations for Metrics Scraper related resources
-    labels: {}
-    annotations: {}
-    serviceLabels: {}
-    serviceAnnotations: {}
-
-
-  # extras is used to configure any additional resources to be deployed. See https://github.com/kubernetes/dashboard/blob/master/charts/kubernetes-dashboard/values.yaml#L425
-  # Extra configurations:
-  # - manifests
-  # - predefined roles
-  # - prometheus
-  # - etc...
-  extras:
-    # Extra Kubernetes manifests to be deployed
-    # manifests:
-    # - apiVersion: v1
-    #   kind: ConfigMap
-    #   metadata:
-    #     name: additional-configmap
-    #   data:
-    #     mykey: myvalue
-    manifests: []
-    serviceMonitor:
-      # Whether to create a Prometheus Operator service monitor.
-      enabled: false
-      # Here labels can be added to the serviceMonitor
-      labels: {}
-      # Here annotations can be added to the serviceMonitor
-      annotations: {}
-      # metrics.serviceMonitor.metricRelabelings Specify Metric Relabelings to add to the scrape endpoint
-      # ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
-      metricRelabelings: []
-      # metrics.serviceMonitor.relabelings [array] Prometheus relabeling rules
-      relabelings: []
-      # ServiceMonitor connection scheme. Defaults to HTTPS.
-      scheme: https
-      # ServiceMonitor connection tlsConfig. Defaults to {insecureSkipVerify:true}.
-      tlsConfig:
-        insecureSkipVerify: true
-
 
 cloudQuery:
   enabled: false
@@ -821,7 +509,7 @@ cloudQuery:
 
   securityContext: {}
     # capabilities:
-    #   drop:
+  #   drop:
   #   - ALL
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
