add proxy to pr automations

--- a/charts/console/templates/secrets.yaml
+++ b/charts/console/templates/secrets.yaml
@@ -55,6 +55,9 @@ data:
 {{ if .Values.console.config.artifactsUrl }}
   CONSOLE_ARTIFACTS_URL: {{ .Values.console.config.artifactsUrl | b64enc | quote }}
 {{ end }}
+{{ if .Values.console.config.assetsProxyUrl }}
+  CONSOLE_ASSETS_PROXY_URL: {{ .Values.console.config.assetsProxyUrl | b64enc | quote }}
+{{ end }}
 {{ range $key, $value := $extraSecretEnv }}
   {{ $key }}: {{ $value | b64enc | quote }}
 {{ end }}
