--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -805,6 +805,12 @@
   publisher: eks
 - name: amazon-sagemaker-hyperpod-observability
   versions:
+  - version: v1.0.4-eksbuild.1
+    compatibilities:
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
   - version: v1.0.3-eksbuild.1
     compatibilities:
     - '1.33'
