--- a/assets/package.json
+++ b/assets/package.json
@@ -75,6 +75,7 @@
     "diff": "7.0.0",
     "encrypt-storage": "2.13.2",
     "escape-carriage": "1.3.1",
+    "fast-xml-parser": "5.3.2",
     "filesize": "10.1.6",
     "fuse.js": "6.6.2",
     "graphql-ws": "5.16.0",
@@ -88,10 +89,10 @@
     "pluralize": "8.0.0",
     "qs": "6.14.0",
     "query-string": "8.1.0",
-    "react": "19.2.1",
+    "react": "19.2.2",
     "react-copy-to-clipboard": "5.1.0",
     "react-diff-viewer": "3.1.1",
-    "react-dom": "19.2.1",
+    "react-dom": "19.2.2",
     "react-dropzone": "14.2.3",
     "react-error-boundary": "4.0.11",
     "react-focus-lock": "2.13.5",
