feat(kas): update ingress paths and values configuration, remove commented code

--- a/charts/kas/templates/ingress.yaml
+++ b/charts/kas/templates/ingress.yaml
@@ -14,34 +14,20 @@ spec:
     - host: {{ .Values.ingress.kas_dns | quote }}
       http:
         paths:
-{{/*          - path: "{{ $.Values.ingress.kubernetesApiPath }}"*/}}
-{{/*            pathType: Prefix*/}}
-{{/*            backend:*/}}
-{{/*              service:*/}}
-{{/*                name: {{ include "kas.serviceName" . }}*/}}
-{{/*                port:*/}}
-{{/*                  number: {{ .Values.service.kubernetesApiPort }}*/}}
-{{/*          - path: /*/}}
-{{/*            pathType: Prefix*/}}
-{{/*            backend:*/}}
-{{/*              service:*/}}
-{{/*                name: {{ include "kas.serviceName" . }}*/}}
-{{/*                port:*/}}
-{{/*                  number: {{ .Values.service.externalPort }}*/}}
-          - path: {{ .Values.agent.path }}
+          - path: "{{ $.Values.ingress.kubernetesApiPath }}"
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ include "kas.serviceName" . }}
+                port:
+                  number: {{ .Values.service.kubernetesApiPort }}
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: {{ include "kas.serviceName" . }}
                 port:
                   number: {{ .Values.service.agentProxyPort }}
-          - path: {{ .Values.api.path }}
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ include "kas.serviceName" . }}
-                port:
-                  number: {{ .Values.api.port }}
   {{ if .Values.ingress.tls.enabled }}
   tls:
     - hosts:
