--- a/charts/kas/values.yaml
+++ b/charts/kas/values.yaml
@@ -99,9 +99,8 @@ api:
   port: 8000
 
 ingress:
-#  enabled: true
   ingressClass: nginx
-#  kubernetesApiPath: /k8s-proxy
+  kubernetesApiPath: /k8s-proxy
   tlsSecretName: kas-tls
 
   tls:
