--- a/static/compatibilities/victoria-metrics-operator.yaml
+++ b/static/compatibilities/victoria-metrics-operator.yaml
@@ -7,19 +7,19 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 0.57.1
-  images: ['victoriametrics/operator:v0.66.1']
+  images: ['victoriametrics/operator:config-reloader-v0.66.1', 'victoriametrics/operator:v0.66.1']
 - version: 0.66.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   chart_version: 0.57.0
-  images: ['victoriametrics/operator:v0.66.0']
+  images: ['victoriametrics/operator:config-reloader-v0.66.0', 'victoriametrics/operator:v0.66.0']
 - version: 0.65.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   chart_version: 0.56.4
-  images: ['victoriametrics/operator:v0.65.0']
+  images: ['victoriametrics/operator:config-reloader-v0.65.0', 'victoriametrics/operator:v0.65.0']
 - version: 0.64.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
