--- a/static/compatibilities/victoria-metrics-operator.yaml
+++ b/static/compatibilities/victoria-metrics-operator.yaml
@@ -1,6 +1,7 @@
 git_url: https://github.com/VictoriaMetrics/operator
 release_url: https://github.com/VictoriaMetrics/operator/releases/tag/v{vsn}
 helm_repository_url: https://victoriametrics.github.io/helm-charts
+readme_url: https://github.com/VictoriaMetrics/operator/blob/master/README.md
 versions:
 - version: 0.66.1
   kube: ['1.34', '1.33', '1.32']
