--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -50,6 +50,9 @@ jobs:
         version: latest
     
     - name: Run compatibility matrix updater
+      env:
+        EXA_API_KEY: ${{ secrets.EXA_API_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         cd utils/compatibility
         pip install -r requirements.txt
