--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -393,7 +393,8 @@ addons:
   helm_repository_url: https://kubernetes-sigs.github.io/aws-efs-csi-driver
   versions:
   - version: 2.2.0
-    kube: []
+    kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27',
+      '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
     requirements: []
     incompatibilities: []
     chart_version: 3.3.0
@@ -1202,7 +1203,7 @@ addons:
     chart_version: 1.9.0
     images: ['quay.io/cilium/cilium:v1.9.0', 'quay.io/cilium/operator-generic:v1.9.0']
   name: cilium
-- icon: https://raw.githubusercontent.com/projectcontour/contour/main/assets/logo.png
+- icon: https://avatars.githubusercontent.com/u/54918165?s=48&v=4
   git_url: https://github.com/projectcontour/contour
   release_url: https://github.com/projectcontour/contour/releases/tag/v{vsn}
   helm_repository_url: https://charts.bitnami.com/bitnami
