--- a/static/compatibilities/aws-efs-csi-driver.yaml
+++ b/static/compatibilities/aws-efs-csi-driver.yaml
@@ -4,7 +4,8 @@ release_url: https://github.com/kubernetes-sigs/aws-efs-csi-driver/releases/tag/
 helm_repository_url: https://kubernetes-sigs.github.io/aws-efs-csi-driver
 versions:
 - version: 2.2.0
-  kube: []
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
   chart_version: 3.3.0
